overflow fix

--- a/style.css
+++ b/style.css
@@ -383,12 +383,12 @@ margin-top: 38px;
 
 
 
-@media (min-width:480px) and (max-width:767px){
+@media (min-width:520px) and (max-width:767px){
 
 
     section{
         width: 100%;
-        
+        overflow-x: hidden;
         
     }
 
